# TinyWebServer

./: CMakeLists.txt
config/: config.json  httpConfig.json
data/: test.html
issue/: link_mariadb.md
src/: Server.hpp  main.cpp
src/http/: httpconn.cpp  httpconn.h
src/sqlConn/: sql  sqlConn.cpp  sqlConn.h
src/threadPool/: threadPool.hpp
